add Tick manger and user input
add Tick manger and user input

--- a/Tetris.csproj
+++ b/Tetris.csproj
@@ -225,6 +225,8 @@
     <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\Piece.cs" />
     <Compile Include="Assets\Scripts\Spawner.cs" />
+    <Compile Include="Assets\Scripts\Ticker.cs" />
+    <Compile Include="Assets\Scripts\UserInput.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
